--- a/templates/app.html
+++ b/templates/app.html
@@ -11,7 +11,7 @@
      }
      h2 {
        display: inline-block;
-       margin: 0.5rem 0.0rem;
+       margin: 0.25rem 0.0rem 0.5rem 0.0rem;
      }
      .err_dlg {
        padding: 1.1rem 1.4rem;
@@ -55,7 +55,7 @@
      .login_info {
        float: right;
        text-align: right;
-       padding-top: 0.80rem;
+       padding-top: 0.50rem;
      }
      .login_info span {
        font-weight: bolder;
