--- a/templates/tourn.html
+++ b/templates/tourn.html
@@ -12,13 +12,8 @@
      header {
        padding: 0.80rem 0.0rem;
      }
-     header select {
-       margin-left: 0.3rem;
-       padding: 0.2rem 0.1rem;
-     }
      h2 {
-       margin-top: 0.5rem;
-       margin-bottom: 0.5rem;
+       margin: 0.5rem 0.0rem;
      }
      .err_blk {
        color: #D10000;
@@ -30,12 +25,13 @@
      }
      .sel_tourn {
        width: 13.0rem;
+       margin-left: 0.3rem;
+       padding: 0.2rem 0.1rem;
      }
      .login_info {
        float: right;
        text-align: right;
-       /*margin-right: 1.0rem;*/
-       /*padding: 0.5rem 0.0rem;*/
+       padding: 0.10rem 0.0rem;
      }
      .login_info span {
        font-weight: bold;
