--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@
           </select>
         </p>
         <p>
-          {% set pw_req = "" if logins else " required" %}
+          {% set pw_req = "" if (logins and not tourn.dflt_pw_hash) else " required" %}
           {% set pw_af = " autofocus" if username else "" %}
           <label for="password">Password:</label>
           <input type="password" id="password" name="password"{{pw_req}}{{pw_af}}>
