issue #10 - store percentages as 0-1 (rather than 0-100), display as .xxx, show pts_pct rather than pts_rec in tie-breaker info

--- a/templates/dash.html
+++ b/templates/dash.html
@@ -248,7 +248,7 @@
               <th class="hor_sect">Pos</th>
               <th class="hor_sect">Pts Pct</th>
               <th class="hor_sect vert_sect">W-L</th>
-              <th class="hor_sect">PF-PA</th>
+              <th class="hor_sect">Pts Pct</th>
             </tr>
           </thead>
           <tbody>
