show pts_pct instead of PF-PA in mobile app, add PlayoffGame, adjust nav after tabulating tourn results
also add hostname and bind mount for shared config directory in deployment

--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -507,7 +507,7 @@
       <p class="lb_hdr">
         <span>{{ent_hdr}}</span>
         <span>W-L</span>
-        <span>PF-PA</span>
+        <span>Pts %</span>
         <span>Rank</span>
       </p>
       {% for pos in leaderboard %}
