--- a/templates/chart.html
+++ b/templates/chart.html
@@ -95,9 +95,10 @@
             <tr>
               <td>{{rnd}}</td>
               {% for tbl in range(1, rnd_tables + 1) %}
-              {% set addl_cls = " vert_sect" if loop.first else "" %}
               {% set label = labels[rnd][tbl] %}
-              <td class="matchup{{addl_cls}}" id="{{label}}">{{matchups[rnd][tbl]|safe}}</td>
+              {% set compl = " compl" if complete[rnd][tbl] else "" %}
+              {% set addl_cls = " vert_sect" if loop.first else "" %}
+              <td class="matchup{{compl}}{{addl_cls}}" id="{{label}}">{{matchups[rnd][tbl]|safe}}</td>
               {% endfor %}
               {% if rnd_byes %}
               {% set label = labels[rnd].get(None) %}
@@ -181,9 +182,10 @@
             <tr>
               <td>{{rnd}}</td>
               {% for tbl in range(1, div_tables[div] + 1) %}
-              {% set addl_cls = " vert_sect" if loop.first else "" %}
               {% set label = labels[div][rnd][tbl] %}
-              <td class="matchup{{addl_cls}}" id="{{label}}">{{matchups[div][rnd][tbl]|safe}}</td>
+              {% set compl = " compl" if complete[div][rnd][tbl] else "" %}
+              {% set addl_cls = " vert_sect" if loop.first else "" %}
+              <td class="matchup{{compl}}{{addl_cls}}" id="{{label}}">{{matchups[div][rnd][tbl]|safe}}</td>
               {% endfor %}
               {% if div_byes[div] %}
               {% set label = labels[div][rnd].get(None) %}
@@ -255,7 +257,7 @@
   <script>
    $(function() {
      let popupWin;
-     $('td.matchup').on('click', function(e) {
+     $('td.matchup.compl').on('click', function(e) {
        if (popupWin && !popupWin.closed) {
          popupWin.close();
        }
