--- a/templates/app.html
+++ b/templates/app.html
@@ -96,16 +96,18 @@
        margin-right: 0.8rem;
        padding: 0.2rem 0.8rem;
      }
-     .actions a {
-       margin-right: 0.5rem;
-       /* padding: 0.2rem 0.2rem; */
-     }
-     a.disabled {
-       color: grey;
-     }
-     .lnk_lbl {
+     .actions label {
        margin-left: 1.0rem;
        margin-right: 0.3rem;
+     }
+     .actions a,
+     .actions span {
+       margin-right: 0.5rem;
+     }
+     .actions .disabled {
+       color: grey;
+       text-decoration: underline;
+       cursor: default;
      }
     </style>
     <link href="/static/datatables.min.css" rel="stylesheet">
@@ -174,13 +176,13 @@
         <button value="{{val}}"{{btn_attr[loop.index0]}}>{{btn_lbl[loop.index0]}}</button>
         {% endfor %}
         {% if links %}
-        <span class="lnk_lbl">Display:</span>
+        <label>Display:</label>
         {% for lnk in links %}
         {% set lnk_enabled = (tourn.stage_compl >= lnk[2]) %}
         {% if lnk_enabled %}
         <a href="{{lnk[0]}}" target="_blank">{{lnk[1]}}</a>
         {% else %}  {# lnk_enabled #}
-        <a class="disabled" href="{{lnk[0]}}">{{lnk[1]}}</a>
+        <span class="disabled" data-href="{{lnk[0]}}">{{lnk[1]}}</span>
         {% endif %}  {# lnk_enabled #}
         {% endfor %}  {# lnk in links #}
         {% endif %}  {# links #}
@@ -329,8 +331,8 @@
      });
 
      // links for charts, dashboards, reports
-     $('.actions a.disabled').on('click', function() {
-       show_error("Cannot display \"" + $(this).text() + "\", data not yet available");
+     $('.actions .disabled').on('click', function() {
+       //show_error("Cannot display \"" + $(this).text() + "\", data not yet available");
        return false;
      });
 
