--- a/templates/popup.html
+++ b/templates/popup.html
@@ -54,7 +54,7 @@
         <h2>Game Info</h2>
         <p>
           <label>Bracket</label>:
-          <span>{{game.bracket}}</span>
+          <span>{{game.bracket_ident}}</span>
         </p>
         <p>
           <label>Round</label>:
