extend stage-based sorting for grid data to players and teams, fix bad pct representation bug in `rank_team_cohort`, tweak to playoff game grid

--- a/templates/app.html
+++ b/templates/app.html
@@ -325,7 +325,11 @@
          {% endif %}
          {% endfor %}
        ],
-       order: [[{{view_info.tbl_order}}, 'asc']],
+       order: [
+         {% for ord_col in view_info.tbl_order %}
+         [{{ord_col}}, 'asc'],
+         {% endfor %}
+       ],
        initComplete: function(settings, json) {
          $(".tbl_wrapper").css('visibility', 'visible');
          table.columns.adjust().draw();
