--- a/templates/bracket.html
+++ b/templates/bracket.html
@@ -85,10 +85,10 @@
      .finals .empty {
        height: calc(var(--base-ht) / 2.0);
      }
-     .champs .empty {
+     .champ .empty {
        height: calc(var(--total-ht) / 2.0);
      }
-     .champs .empty:last-of-type {
+     .champ .empty:last-of-type {
        border-top: 2px solid black;
      }
      .round .team {
@@ -172,8 +172,8 @@
             {% endif %}
           </div>
         </div>
-        <div class="round champs">
-          <h2>Champions</h2>
+        <div class="round champ">
+          <h2>Champion</h2>
           <div class="empty">
           </div>
           <div class="empty">
